--- a/meme-g/src/index.css
+++ b/meme-g/src/index.css
@@ -18,10 +18,24 @@ code {
 
 
 /* Nav Bar */
-#nav{
-
+.nav{
+  width: 100%;
+  height: 70px;
+  background-color: black;
 }
 
-.nav-logo{
-  
+#nav-logo{
+  width: 4%;
+  height: 3pc;
+  position: absolute;
+  left: 23%;
+  top: 10px;
+}
+
+.nav-span{
+  color: white;
+  position: absolute;
+  left: 30%;
+  top: 20px;
+  font-size: larger;
 }
