--- a/meme-g/src/index.css
+++ b/meme-g/src/index.css
@@ -21,21 +21,21 @@ code {
 .nav{
   width: 100%;
   height: 70px;
-  background-color: black;
+  background-image: linear-gradient(to right, rgb(115, 0, 255), rgb(103, 31, 171), rgb(91, 79, 103));
 }
 
 #nav-logo{
   width: 4%;
   height: 3pc;
   position: absolute;
-  left: 23%;
+  left: 42%;
   top: 10px;
 }
 
-.nav-span{
+.span-meme-gen{
   color: white;
   position: absolute;
-  left: 30%;
+  left: 52%;
   top: 20px;
   font-size: larger;
 }
