--- a/meme-g/src/index.css
+++ b/meme-g/src/index.css
@@ -43,3 +43,16 @@ code {
   font-size: 1.5rem;
   font-style: italic;
 }
+
+/* Meme form and button */
+.form{
+
+}
+
+.form-input{
+
+}
+
+.form-button{
+  
+}
